welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: not found: value i
    i=3
    ^arrayFront9:10: error: value legth is not a member of Array[Int]
    for (i<-0 to nums.legth){
                      ^