welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  if (nums.length<=4){
    i=3
    for (j<-0 to 3){
      if ( nums(j)==9){
        return true
      }
    }
  }else{
    for (i<-0 to nums.legth){
      if (nums(i)==9){
        return true
      }
    }
  }
  return false
}
  